# term

./: CMakeLists.txt  CMakePresets.json  README.md
.github/workflows/: ci.yml
.spell/: words.txt
cmake/: Config.cmake.in  GTest.cmake  GitDeps.cmake  Test.cmake  pkg-config.pc.in
docs/: colors-and-styles.md  creating-a-terminal.md  cursor-control.md  input.md  links-and-titles.md  screen-control.md
include/kaycxx/: term.hpp
include/kaycxx/term/: ansi_mode.hpp  basic_color.hpp  color.hpp  color_style.hpp  cursor_style.hpp  hyperlink.hpp  indexed_color.hpp  input_mode.hpp  rgb_color.hpp  sgr.hpp  terminal.hpp  terminal_size.hpp
src/: terminal.cpp
src/detail/: ansi_support.cpp  ansi_support.hpp  ansi_support.posix.cpp  ansi_support.win32.cpp  input_mode.cpp  input_mode.hpp  input_mode.posix.cpp  input_mode.win32.cpp  input_state.hpp  key_reader.cpp  key_reader.hpp  key_reader.posix.cpp  key_reader.win32.cpp  osc.cpp  osc.hpp  terminal_size.hpp  terminal_size.posix.cpp  terminal_size.win32.cpp
test/: ansi_mode.test.cpp  library-template.test.cpp  terminal.test.cpp
